AC_INIT([epanet],[2.0.12.2],[https://github.com/sdteffen/epanet2/issues])
AC_CANONICAL_HOST
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_HEADERS([config.h])

AC_LANG([C])
AC_PROG_CC
AC_USE_SYSTEM_EXTENSIONS
LT_INIT
AM_PROG_CC_C_O

AC_HEADER_STDC
AC_CHECK_LIB(m, pow)

AC_CONFIG_FILES([Makefile debian/Makefile src/Makefile])
AC_OUTPUT
